--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="llLaa1h1Im960eK5GMAVE/lsFKxFV+1lMjNJto61Mq+eeZ6b+aqQ3ojPgHcuIrmswOzPIXx4RXt5EKB2rjchtzq5FHq/dIGVkZwehumx2M349Uc5FctQ09TQOSUL1ki5">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="r+cttWv+bA3mb63JXZIKs9VzhfjqLDrYm7vkqgdegMja30hArFmVcX5jCXPGLxhVG+DVM1gkNd4rpGv7wdQrSJAipU2YjKGAfAn0zEoHUFYne33X1pwdaDqtIRdIPQpx">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
