--- a/joe.html
+++ b/joe.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AU1dY3L1PqV5BF95Pgd30cMpYB486DrfFxz/eVtrWZfwYABmPVcd9eGZu6BFwxcrHN2Dfrgf1/Waj2epFo2ltxyEbSOEeAd3dzrT/eTrvS63QZjDldZj8nPcycVp3lxV">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="12xDA5o4m637hwxwYi4yjwBcggtExBlKNwHzeZerYxS2vcD5efY6eio7m+PuEXdfgxVg2J3kAPGTJ2kO5elHqISgFLb9VyJw4zSQBG5plzUrPWJ3kIGrVRLRCz+H50eO">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
