--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="S2nPH8Fj/xsMTzc+0WFRZxfahZjXL8EXQINjGgzGxy3yGqk0sWwGsACoHjwIMhF8vtJFul7ChnzqttjxWNrmUSQ0xHhSb1ac3A7mOJGh2zkVV6cAVf0r86lnH14Czy0F">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HNt7RbEyOAXd9BbxykPTTuRWfEtDYkXyfChU6H4zW1GaxdnPALrwa6Iq9BxiJ+gmV313p/9scadkbYJjSe6ev/O3xoE2q97moaRE7bfq1XOlKCg4EdfvqbbkUTHdscUH">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
