--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="l4Wz0SUtrazW5FEeLDl9PHYCIQjMV1Z3fJuM5sqO2Ivjt9mH0y/uFqiLHpgo/WXuvghy0atFAc2b8d8cohNptnLO9E1sh5n6cqqfvChcQgcnAaz4uRE3AEa5db7667/x">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yGbRFdXjQmzjFTl+dP7BgwCnStTgdZCN3ipwHBMGNOJndA2fgH6DDrONAz7LQcFaMyeXIIBRk1pqh7ZvJL4IYmjw+6YmTF3Mh2rVDWFt0SWroEzgk/Q4ofbnxVRJic32">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
