--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tezpTKhNqVPhNUyppZkHXgWxtatiWCX19UOB/dyyhs08PrT/ChJi2ff9B+FA0vTnYDCcTn3vYXszTvs+is3IPpqJXoESLAjoCTMxRplIFZ5UFuWtgaXp+yosSsQ3UCbx">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Q2F+ADZ5lZz+kgFnmvrTQzZH7D9sDw5pUVgxIYsEaWKpvVfYTWqFtmIrn8EuDj7J3skXagcPDU52sKCZ7XGZsLGz04UXc60h1PpRy0eW9LNQJVdKKm7I5Z4/iifaFPBP">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
