--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web maker</a></section><section class="header11 cid-r9p0bbTBps" id="header11-6u">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="header11 cid-r9p0bbTBps" id="header11-6u">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -92,7 +92,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="11ZfiRc2IHwmDhF1fJRoyX0XQeiODdmRV2lPgBPfKxePxkqxZmZQ+evEMO6DKbSokOeQjyl7g+RMy8NnUBxqMnYdZUeJlnK7pfV3jSYzQagJv+8tSFXQvjm1TYkqlSdm">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mnSiLMHilQ53la/HkTRkLsnKvc0ShYuqz8Xz0F2TQFRSf6hdgGtU3CTGxr8FVOVrgOU5vxKMsfhMYzklnLfti2Ww7Pz+kaUR9bUpS5eAN4g2LGedxEB6KfKItUsKc0Oc">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-70">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-7">SUBSCRIBE</button></span>
@@ -145,14 +145,14 @@
                     
                 </div>
                 <div class="clearfix"></div>
-                <div id="bootstrap-accordion_142" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_147" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_142" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_147" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="mbr-fonts-style display-7">Read The Article</h4>
                             </a>
                         </div>
-                        <div id="collapse1_142" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_142">
+                        <div id="collapse1_147" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_147">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">If you are one of the many self-employed or work for an employer that does not offer any insurance benefits, you will have to shop for health and dental policy on your own or with the help of an insurance agent. For some this may seem overwhelming but it really only takes some research to gain better understanding on how insurance plans are organized.
 <br>
@@ -222,11 +222,11 @@
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_144" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_149" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-7">Ingredients</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_144" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_149" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">3 eggs 
 <br>2 cups sugar 
@@ -239,11 +239,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_144" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_149" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-7">Directions</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_144" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_149" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Preheat oven to 350 degrees. With a mixer, beat the eggs with the sugar until slightly thickened and light in color, about 5-7 minutes. The mixture should almost double in size. The eggs work as a leavening agent in this recipe, so do not skip this step. This mixture should form a ribbon when you lift the beaters out of the bowl. Add the butter and vanilla; mix two more minutes. Stir in the flour until just combined. Add the cranberries and stir to mix throughout. 
 <br>
