create github pages

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="menu cid-r6QbJCtax9" once="menu" id="menu2-3s">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="menu cid-r6QbJCtax9" once="menu" id="menu2-3s">
 
     
 
