--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="m/RTwyPmQIwLkjbEJIhVD8CvCpVzppFxAi/Z3ePIOTpCG70vHoeuZN34WryjBpRLB3K2bge0zSmCL/ouo2hSGr3scxUOqu47HQwXv/Ulv7HIM6vCSmFVxCJpgIASJ3lH">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="k5XLB1DxWjiHg0lBkhog7ilst4fv1tAJ9eUvB+bjsCPdWNro7x0iRpCNIUPe3+Xmeooelk7euspkcn0jdhFrxkqlvlsdaC88Hd0bzXNOjobYuiweDa4QDkzR3gvXkKxA">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
