--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="header11 cid-r9p0bbTBps" id="header11-6u">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="header11 cid-r9p0bbTBps" id="header11-6u">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -92,7 +92,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mnSiLMHilQ53la/HkTRkLsnKvc0ShYuqz8Xz0F2TQFRSf6hdgGtU3CTGxr8FVOVrgOU5vxKMsfhMYzklnLfti2Ww7Pz+kaUR9bUpS5eAN4g2LGedxEB6KfKItUsKc0Oc">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xc7vxEEamWyV73yCqaLCUerJ72+VS4++xh3mUY/b3rAvF14zd1hpZ7RUIbghZXuiZcNk4ILfgpSe4rWsCjwod6CnJeEMCJj9k7I+yMZPHui3/96X/ajOyq7pPrrtrl1s">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-70">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-7">SUBSCRIBE</button></span>
